package com.donatrack.donaciones.domain.enums;

public enum EstadoNecesidad {
  PENDIENTE,
  CUBIERTA
}
