package com.donatrack.donaciones.domain.enums;

public enum TipoDocumento {
  DNI,
  CUIT,
  PASAPORTE
}
