@startuml DonaTrack_ServicioDonaciones_DiagramaClases
skinparam classAttributeIconSize 0
skinparam linetype ortho

package "servicio de donaciones"{
    package "Gestión de Personas" {
        enum TipoDocumento {
            DNI
            CUIT
            PASAPORTE
        }

        class DocumentoIdentidad {
            - tipo: TipoDocumento
            - numero: String
        }

        DocumentoIdentidad --> TipoDocumento

        enum TipoPersonaJuridica {
            GUBERNAMENTAL
            ONG
            EMPRESA
            INSTITUCION
        }

        enum MedioContacto {
            CORREO
            TELEFONO
            WHATSAPP
            DISCORD
        }

        abstract class Persona {
            - id: UUID
            - email: String
            - contacto: Contacto
            - direccion: Direccion
            - documento: DocumentoIdentidad
            - roles: List<Rol>
            + agregarRol(Rol r)
            + validarRol(Rol r)
            + validarDocumentacion(DocumentoIdentidad d)
            + setDocumento(DocumentoIdentidad documento)
            + actualizarInformacion(Map<String, Object> datosNuevos)
        }

        class Contacto {
            - correoElectronico: String
            - telefono: String
            - whatsapp: String
            - medioPredeterminado: MedioContacto
        }

        class Direccion {
            - calle: String
            - altura: Decimal
            - localidad: String
            - pais: Pais
            - codigoPostal: String
            - coordenadas: Coordenada
        }

        class Coordenada {
            - latitud: Decimal
            - longitud: Decimal
        }

        class Provincia{
            - nombreProvincia: String
            - Pais: Pais
        }

        class Pais {
            - nombrePais: String
            - nacionalidad: String
        }

        class PersonaHumana extends Persona {
            - nombre: String
            - apellido: String
            - edad: int
            + validarRol(r: Rol)
            + validarDocumentacion(DocumentoIdentidad d)
            + actualizarInformacion(Map<String, Object> datosNuevos)
        }

        note top of PersonaHumana
        **Regla de negocio:**
        Tira excepción de invalidez de 
        rol si el rol es Beneficiario 
        (acepta solo Donante o Representante)
        end note

        class PersonaJuridica extends Persona {
            - razonSocial: String
            - tipo: TipoPersonaJuridica
            - representantes: List<Representante>
            - rubro: String
            + agregarRepresentante(Representante r)
            + validarRol(Rol r)
            + validarDocumentacion(DocumentoIdentidad d)
            + actualizarInformacion(Map<String, Object> datosNuevos)
        }

        note top of PersonaJuridica
        **Regla de negocio:**
        Tira excepción de 
        invalidez de rol si el rol es 
        Representante
        end note

        'relaciones
        Direccion --> Provincia : "es de un"
        Provincia --> Pais : "forma parte de"
        Direccion --> Coordenada : "se encuentra"
        Persona --> Direccion : "tiene"
        Persona "1" *-- "1" Contacto : "tiene"
        Contacto --> MedioContacto : "define"
        Persona --> DocumentoIdentidad : "tiene"
        PersonaJuridica --> TipoPersonaJuridica : "se clasifica en"
    }

    package "Gestion de Roles" {
        abstract class Rol {
            - fechaAlta: LocalDate
        }

        class Donante extends Rol {
            - donacionesRealizadas: List<DonacionOriginal>
            + agregarDonacion(DonacionOriginal d)
            + consultarEstadoDonacion(Donacion d)
            + filtrarDonaciones(estado: EstadoDonacion, categoria: String)
            + UbicacionCamion()
        }

        class Representante extends Rol {
            - cargo: String
            - organizacion: PersonaJuridica
        }

        class Beneficiario extends Rol {
            - donacionesAsignadas: List<Donacion>
            - necesidadesDeclaradas: List<Necesidad>
            - correoRepresentante: String
            + registrarNecesidad(n: Necesidad)
            + confirmarRecepcion(d: Donacion, fotos: List<String>)
            + EstadoDonaciones()
            + UbicacionCamion()
        }
    }

    package "Algoritmos y Servicios de Dominio" {
        ' --- SERVICIOS DE DOMINIO (Clases sin estado, solo lógica) ---
        class AsignadorDonaciones <<Domain Service>> {
            + ejecutarMatchmaking(donaciones: List<Donacion>, necesidades: List<Necesidad>): List<ResultadoMatch>
        }
        
        
        ' --- INTEGRACIÓN EXTERNA (Entrega 3) ---
        interface NotificadorPort {
            + notificar(destinatario: Contacto, mensaje: String, medio: MedioContacto)
        }

        class GestorEventosLogistica <<Domain Service>> {
            + procesarInicioRuta(idRuta: UUID, donacionesEnRuta: List<UUID>)
            + procesarEntregaExitosa(idDonacion: UUID, comprobante: String)
            + procesarEntregaFallida(idDonacion: UUID, motivo: String)
        }

        ' Relaciones de eventos
        GestorEventosLogistica --> NotificadorPort : "usa para avisar >"
        GestorEventosLogistica ..> Donacion : "actualiza estado de"
        
        class PersonaFactory <<Factory>> {
            + {static} crearPersona(datosCrudos: Map<String, String>): Persona
        }
        
        class MigradorDonantes <<Domain Service>> {
            + procesarMigracion(archivo: Archivo): List<Persona>
        }

        ' --- INTERFACES DE ESTRATEGIA ---
        interface AlgoritmoAsignacion {
            + recomendarNecesidades(donaciones, necesidades)
        }

        class CompatibilidadSemantica implements AlgoritmoAsignacion
        class PrioridadASubAtendidos implements AlgoritmoAsignacion
        
        interface ImportadorStrategy {
            + importar(Archivo)
        }

        class ImportadorCSV implements ImportadorStrategy

        ' --- RELACIONES QUE EXPLICAN EL FLUJO ---
        MigradorDonantes ..> PersonaFactory : "invoca"
        AsignadorDonaciones --> AlgoritmoAsignacion : "utiliza"
        MigradorDonantes --> ImportadorStrategy : "utiliza"
    }

    package "Gestion de Ingreso y Segmentación" {
        class DonacionOriginal {
            - id: UUID
            - descripcionGeneral: String
            - fechaRecepcion: Date
            - donante: Donante
            - donacionesSegmentadas: List<Donacion>
            - usuarioId: String
            + segmentarBienes(bienesBrutos)
        }

        note left of DonacionOriginal 
        **Regla de negocio:**
        Representa la "donación original" o 
        carga física única en el depósito. A partir 
        de los bienes, genera de forma automatizada 
        las Donaciones independientes segmentadas.
        end note

        class Donacion {
            - id: UUID
            - fechaCreacion: Date
            - estado: EstadoDonacion
            - bienes: List<Bien>
            - subcategoria: Subcategoria
        }

        enum EstadoDonacion {
            EN_DEPOSITO
            ASIGNADA
            LISTA_PARA_ENTREGAR
            EN_TRASLADO
            ENTREGADA
            ENTREGA_FALLIDA
            VENCIDA
        }

        class HistorialEstado {
            - Donacion: Donacion
            - estado: EstadoDonacion
            - fecha: Date
            - observacion: String
            - usuarioId: String
        }

        class Bien {
            - descripcion: String
            - cantidad: double
            - unidadMedicion: String
            - esUsado: boolean
            - fechaVencimiento: LocalDate
            - foto: List<Foto>
        }

        class Categoria {
            - nombre: String
            - descripcion: String
            + agregarSubcategoria(Subcategoria)
        }

        class Subcategoria {
            - nombre: String
            - descripcion: String
            - categoriaPadre: Categoria
            + esSubcategoriaDe(categoria)
        }

        class Foto{
            - descripcion: String
            - Url: String
        }

        Bien --> Subcategoria
        Bien --> Foto
        Categoria "1" *-- "0..*" Subcategoria : "contiene"
        Donacion *-- HistorialEstado
        Donacion --> Subcategoria : "corresponde a una única >"
        Donacion "1" *-- "1..*" Bien : "agrupa"
        Donacion --> EstadoDonacion : "se encuentra en"
        DonacionOriginal "1" *-- "0..*" Donacion : "segmenta en >"
    }

    package "Gestion de Necesidades" {
        enum EstadoNecesidad {
            ABIERTA
            SATISFECHA
        }

        enum TipoPeriodo {
            SEMANAL
            MENSUAL
        }

        abstract class Necesidad {
            - id: UUID
            - descripcion: String
            - fechaSolicitud: Date
            - subcategoriaRequerida: Subcategoria
        }

        class NecesidadExtraordinaria extends Necesidad {
            - cantidadRequerida: double
            - estado: EstadoNecesidad
            - donacionesRecibidas: List<Donacion>
            + acumularDonacionesParciales(d: Donacion)
            + estaCubierta(): Boolean
        }

        class NecesidadRecurrente extends Necesidad {
            - cantidadObjetivo: double
            - activa: Boolean
            - historialPeriodos: List<PeriodoNecesidad>
            - periodoActual: PeriodoNecesidad
            + cerrarPeriodoYCrearSiguiente(): PeriodoNecesidad
            + darDeBaja()
        }

        class PeriodoNecesidad {
            - id: UUID
            - fechaInicio: LocalDate
            - fechaFin: LocalDate
            - estado: EstadoNecesidad
            - donacionesAsignadas: List<Donacion>
            + asignarDonacion(d: Donacion, objetivo: double)
            + estaCubierta(objetivo: double): Boolean
        }
        
        NecesidadRecurrente --> TipoPeriodo : "frecuencia de"
        NecesidadRecurrente "1" *-- "0..*" PeriodoNecesidad : "gestiona"
        PeriodoNecesidad --> EstadoNecesidad : "se encuentra en"
        NecesidadExtraordinaria --> EstadoNecesidad : "se encuentra en"
    }
}

' Gestión de Personas y Roles
Persona "1" *--down--- "1..*" Rol : "asume"

' Conexiones de Dominio (Roles, Necesidades y Donaciones)
Donante "1" -- "0..*" DonacionOriginal
Beneficiario "1" *--- "0..*" Necesidad : "declara"
Necesidad "*" ---> "1" Subcategoria : "demanda"
@enduml